--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Nexona - Innovative Solutions</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
@@ -14,32 +14,55 @@
             text-align: center;
         }
         header {
-            background-color: #0073e6;
+            background: linear-gradient(135deg, #0073e6, #005bb5);
             color: white;
-            padding: 20px 0;
+            padding: 40px 0;
+            font-size: 1.5em;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
         }
         section {
-            padding: 50px 20px;
+            padding: 60px 20px;
+            max-width: 800px;
+            margin: auto;
+        }
+        .under-development {
+            background: #ffeb3b;
+            color: #000;
+            padding: 30px;
+            border: 2px dashed #333;
+            font-weight: bold;
+            font-size: 1.2em;
+            animation: fadeIn 2s ease-in-out;
+        }
+        .about, .contact {
+            background: white;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+            animation: slideUp 1.5s ease-in-out;
         }
         footer {
             background-color: #333;
             color: white;
-            padding: 10px 0;
+            padding: 20px 0;
+            font-size: 0.9em;
         }
         a {
             color: #0073e6;
             text-decoration: none;
+            font-weight: bold;
         }
         a:hover {
             text-decoration: underline;
         }
-        .under-development {
-            background-color: #f4f4f4;
-            color: #333;
-            padding: 20px;
-            border: 2px dashed #333;
-            margin: 20px;
-            font-weight: bold;
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes slideUp {
+            from { transform: translateY(50px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
         }
     </style>
 </head>
@@ -54,12 +77,12 @@
         <p>We are working on something amazing. Stay tuned for updates!</p>
     </section>
 
-    <section>
+    <section class="about">
         <h2>About Us</h2>
         <p>Nexona is dedicated to providing cutting-edge technology solutions to help businesses thrive in the digital era. We focus on innovation, efficiency, and growth.</p>
     </section>
 
-    <section>
+    <section class="contact">
         <h2>Contact Us</h2>
         <p>Email: <a href="mailto:team@nexona.co.uk">team@nexona.co.uk</a></p>
         <p>Follow us on <a href="#">LinkedIn</a> | <a href="#">Twitter</a></p>
